# Fusion360-Plugin

./: .gitattributes  .gitignore  .gitkeep  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_041_CLOSURE.md  TESTING_NEW_GUARDRAILS.md  THIRD_PARTY_NOTICES.md  conftest.py  mypy.ini
harness/: README.md  pyproject.toml  setup.py  source-files.txt
harness/apps/fusion_agent_mcp/: __init__.py  benchmark_bridge.py  mcp_surface.py  profiles.py  runtime.py  server.py
harness/tests/: __init__.py  conftest.py  test_authority_bypass_matrix.py  test_authority_coverage_041.py  test_authority_policy.py  test_authority_policy_paths_extra_041.py  test_authority_registry_coverage_041.py  test_authority_sink_revalidation_coverage_041.py  test_autodesk_typed_backend.py  test_backend_selection.py  test_benchmark_real_bridge.py  test_benchmark_security_041.py  test_benchmark_v2.py  test_boundary_coverage_041.py  test_bounded_global_inspect_021.py  test_bounded_inspection_021.py  test_cad_spec_v2.py  test_cadspec_numeric_security_041.py  test_cadspec_v1_preflight_security_041.py  test_cadspec_v2_refs_and_prompt_planning.py  test_capability_executor.py  test_capability_graph_binding_041.py  test_configure_mcp.py  test_fast_path.py  test_fast_path_hardening_041.py  test_faust_typed_backend.py  test_legacy_output_confinement.py  test_legacy_v1_execution_boundary_041.py  test_mcp_output_contracts.py  test_memory_provenance.py  test_mock_client_contract_041.py  test_p0_transport.py  test_p1_mcp_surface.py  test_planner_output_deny_041.py  test_public_benchmark.py  test_public_benchmark_adapters.py  test_public_fusion_agent_driver.py  test_real_capability_packs.py  test_reference_suite_context_041.py  test_request_context_server_041.py  (+12 more)
(+135 files in other folders)
