[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion-agent-harness"
version = "0.4.1"
description = "Safe, memory-backed CAD automation harness for Autodesk Fusion MCP sessions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27,<1",
  "jsonschema>=4.0",
  "mcp>=1.28,<2",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
dev = [
  "mypy>=1.16,<2",
  "pip-audit>=2.9,<3",
  "pytest-cov>=6,<8",
  "ruff>=0.12,<1",
  "uv>=0.7,<1",
]
faust = [
  "fusion360-mcp-server==0.1.0",
]

[project.scripts]
fusion-agent = "cli.main:app"
fusion-agent-mcp = "fusion_agent_mcp.server:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
